--- a/shippable.yml
+++ b/shippable.yml
@@ -18,5 +18,5 @@ before_script:
 
 script:
   - go test -race -v -coverprofile=profile.cov -covermode=count ./libMonkey | go-junit-report > shippable/testresults/libMonkey.xml
-  - goveralls -coverprofile=profile.cov -repotoken $COVERALLS_TOKEN
   - gocov convert profile.cov | gocov annotate - | gocov-xml > shippable/codecoverage/libMonkey.xml
+  - goveralls -coverprofile=profile.cov -repotoken $COVERALLS_TOKEN -service=travis-ci
