--- a/shippable.yml
+++ b/shippable.yml
@@ -11,6 +11,7 @@ before_install:
   - go get -u github.com/jstemmer/go-junit-report
   - go get github.com/mattn/goveralls
   - go get github.com/axw/gocov/gocov
+  - go get github.com/AlekSi/gocov-xml
 
 before_script:
   - mkdir -p shippable/testresults
